<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_name">PocketMine-MP for Android</string>
    <string name="activity_name">PocketMine-MP</string>
    <string name="server_handler">Server Management</string>
    <string name="server_online">Start Server</string>
    <string name="server_kill">Stop Server</string>
    <string name="install_bin">Installing PocketMine-MP for Android...</string>
    <string name="bin_installed">PocketMine-MP for Android was successfully installed</string>
    <string name="bin_error">Unable to install PocketMine for Android</string>
    <!-- Action bar menus -->
    <string name="abs_settings">Settings</string>
    <string name="abs_file_manager">File Manager</string>
    <string name="abs_about">About</string>
    <!-- Server Service -->
    <string name="sevc_service">PocketMine-MP Service</string>
    <string name="sevc_server_started">PocketMine-MP is now running</string>
    <!--  -->
    <string name="title_activity_log">Console</string>
    <string name="btn_console_send">Enter</string>
    <string name="title_activity_file_manager">File Manager</string>
    <string name="abs_force_close">Kill server</string>
    <string name="title_activity_version_manager">Version manager</string>
    <string name="abs_version_manager">Version manager</string>
    <string name="abs_properties_editor">Properties editor</string>
    <string name="abs_plugins">Plugins</string>
    <string name="thank_you">Thank you for downloading PocketMine-MP for Android!</string>
    <string name="before_anything">Now we will prepare everything for you.</string>
    <string name="preparing_string">Preparing...</string>
    <string name="title_activity_install">Welcome!</string>
    <string name="versionToInstall">Choose a version to install:</string>
    <string name="skip_version_sel">Skip this step</string>
    <string name="install_dev">Download development version</string>
    <string name="server_info">Server Status</string>
    <string name="stat_online">Online: Unknown</string>
    <string name="stat_ram">RAM Usage: Unknown</string>
    <string name="stat_download">Download: Unknown</string>
    <string name="stat_upload">Upload: Unknown</string>
    <string name="stat_tps">Ticks per second: Unknown</string>
    <string name="server_players">Players</string>
    <string name="player_kick">Kick</string>
    <string name="player_ban">Ban</string>
    <string name="player">Player</string>
    <string name="title_activity_config">Server properties editor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="config_name">Server name:</string>
    <string name="config_port">Server port:</string>
    <string name="config_gamemode">Gamemode:</string>
    <string name="gamemode_survival">Survival</string>
    <string name="gamemode_creative">Creative</string>
    <string name="gamemode_adventure">Adventure</string>
    <string name="gamemode_spectator">Spectator</string>
    <string name="config_players">Maximal players at once:</string>
    <string name="config_spawnprotect">Spawn protection:</string>
    <string name="config_spawnprotect_range">Range</string>
    <string name="config_whitelist">Whitelist:</string>
    <string name="config_whitelist_edit">Edit</string>
    <string name="config_desc">Server description:</string>
    <string name="config_usage">Send anonymous usage statistics</string>
    <string name="config_query">Enable Query (allows others to check server status)</string>
    <string name="config_rcon">Enable RCON (allows you to remotely control this server)</string>
    <string name="config_hardcore">Hardcore</string>
    <string name="config_motd">MOTD (Message of the day):</string>
    <string name="config_advanced">Advanced</string>
    <string name="config_save">Save</string>
    <string name="config_cancel">Cancel</string>
    <string name="config_rcon_password">RCON Password:</string>
    <string name="config_ip">Internal server IP:</string>
    <string name="config_ram">RAM:</string>
    <string name="config_achievements">Announce player achievements</string>
    <string name="config_distance">View distance:</string>
    <string name="config_distance_warning">Selected view distance is over 10. This settings can cause lags and would require lots of data to upload.</string>
    <string name="config_pvp">Enable PvP</string>
    <string name="config_difficulty">Difficulty:</string>
    <string name="difficulty_peaceful">Peaceful</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="config_level_name">World directory:</string>
    <string name="config_level_seed">World seed:</string>
    <string name="config_level_type">World type:</string>
    <string name="config_level_type_info">PocketMine level types: DEFAULT (Standard world), FLAT (Flat world). Level types can be added by plugins.</string>
    <string name="config_auto_save">Auto-save</string>
    <string name="config_fly">Allow use of Fly-in-Survival mods</string>
    <string name="conf_generator_setting">Generator Settings (for superflat world):</string>
    <string name="title_activity_whitelist">Whitelist</string>
    <string name="whitelist_add">Add</string>
    <string name="whitelist_remove">Remove</string>
    <string name="server_actions">Actions</string>
    <string name="action_op">Op</string>
    <string name="action_deop">Deop</string>
    <string name="stat_ip">IP Address: Unknown</string>
    <string name="title_activity_plugins">Plugins</string>
    <string name="plugin">Plugin</string>
    <string name="plugin_author">Author</string>
    <string name="plugins_error_nointernet">You have no internet connection.</string>
    <string name="plugins_error_general">An error occurred.</string>
    <string name="plugins_error_retry">Retry</string>
    <string name="plugins_error_cancel">Cancel</string>
    <string name="title_activity_search_results">Search results</string>
    <string name="title_activity_category">Category</string>
    <string name="title_activity_details">Plugin details</string>
    <string name="plugins_featured">We recommend</string>
    <string name="plugins_essential">Essential</string>
    <string name="more">See more...</string>
    <string name="plugins_popular">Most popular</string>
    <string name="plugin_description">Description</string>
    <string name="plugin_reviews">Reviews</string>
    <string name="plugin_rating">Rating:</string>
    <string name="review_author">Author</string>
    <string name="review_version">Version: Unknown</string>
    <string name="plugin_links">Links</string>
    <string name="title_activity_review">Reviews</string>
    <string name="review_author_response">Author\'s Response</string>
    <string name="link_sample">Sample</string>
    <string name="link_sample_url">http://google.pl/</string>
    <string name="title_activity_developer">DeveloperActivity</string>
    <string name="ad_unit_id">/23767766/PocketMine_Android</string>
    <string name="channel_stable">Stable</string>
    <string name="download">Download</string>
    <string name="choose_channel">Choose channel:</string>
    <string name="dummy_version">Version: Unknown (API version: Unknown)</string>
    <string name="dummy_date">1/1/1970</string>
    <string name="channel_beta">Beta</string>
    <string name="channel_dev">Development</string>

</resources>