<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_weight="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_port" />

        <EditText
            android:id="@+id/config_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="19132" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/config_name" />

        <EditText
            android:id="@+id/config_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Minecraft: PE Server" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/config_desc" />

        <EditText
            android:id="@+id/config_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Server made using PocketMine-MP" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/config_motd" />

        <EditText
            android:id="@+id/config_motd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="Welcome @player to this server!" />

        
        <!--
        <CheckBox
            android:id="@+id/config_usage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/config_usage" />
            -->

        <CheckBox
            android:id="@+id/config_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/config_query" />

        <CheckBox
            android:id="@+id/config_achievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/config_achievements" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/config_gamemode" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/config_creative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="setGamemode"
                android:text="@string/gamemode_creative"
                android:textOff="@string/gamemode_creative"
                android:textOn="@string/gamemode_creative" />

            <ToggleButton
                android:id="@+id/config_survival"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setGamemode"
                android:text="@string/gamemode_survival"
                android:textOff="@string/gamemode_survival"
                android:textOn="@string/gamemode_survival" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/config_adventure"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setGamemode"
                android:text="@string/gamemode_adventure"
                android:textOff="@string/gamemode_adventure"
                android:textOn="@string/gamemode_adventure" />

            <ToggleButton
                android:id="@+id/config_spectator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setGamemode"
                android:text="@string/gamemode_spectator"
                android:textOff="@string/gamemode_spectator"
                android:textOn="@string/gamemode_spectator" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/config_hardcore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_hardcore" />

        <CheckBox
            android:id="@+id/config_pvp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/config_pvp" />

        <CheckBox
            android:id="@+id/config_fly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_fly" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/config_difficulty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/config_peaceful"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setDifficulty"
                android:text="@string/difficulty_peaceful"
                android:textOff="@string/difficulty_peaceful"
                android:textOn="@string/difficulty_peaceful" />

            <ToggleButton
                android:id="@+id/config_easy"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="setDifficulty"
                android:text="@string/difficulty_easy"
                android:textOff="@string/difficulty_easy"
                android:textOn="@string/difficulty_easy" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/config_normal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setDifficulty"
                android:text="@string/difficulty_normal"
                android:textOff="@string/difficulty_normal"
                android:textOn="@string/difficulty_normal" />

            <ToggleButton
                android:id="@+id/config_hard"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setDifficulty"
                android:text="@string/difficulty_hard"
                android:textOff="@string/difficulty_hard"
                android:textOn="@string/difficulty_hard" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/config_players" />

        <EditText
            android:id="@+id/config_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/config_spawnprotect" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ToggleButton
                android:id="@+id/config_spawnprotect_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:checked="true"
                android:textOff="Disabled"
                android:textOn="Enabled" />

            <EditText
                android:id="@+id/config_spawnprotect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/config_spawnprotect_enable"
                android:ems="10"
                android:hint="@string/config_spawnprotect_range"
                android:inputType="number"
                android:text="16" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/config_whitelist" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ToggleButton
                android:id="@+id/config_whitelist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="Disabled"
                android:textOn="Enabled" />

            <Button
                android:id="@+id/config_whitelist_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dip"
                android:layout_weight="1"
                android:text="@string/config_whitelist_edit" />
        </LinearLayout>

        <TextView
            android:id="@+id/config_advanced_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/config_advanced"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/config_advanced_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <!--
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_ip" />

            <EditText
                android:id="@+id/config_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:digits="0123456789."
                android:text="" />
                -->
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/config_level_name" />
            
            <EditText
                android:id="@+id/config_level_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="world" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/config_level_seed" />
            
            <EditText
                android:id="@+id/config_level_seed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/config_level_type" />
            
            <EditText
                android:id="@+id/config_level_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="DEFAULT" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_level_type_info" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/conf_generator_setting" />
            
            <EditText
                android:id="@+id/config_generator_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="" />

            <CheckBox
                android:id="@+id/config_autosave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/config_auto_save" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/config_ram" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ToggleButton
                    android:id="@+id/config_ram64"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="setRAM"
                    android:textOff="64mb"
                    android:textOn="64mb" />

                <ToggleButton
                    android:id="@+id/config_ram128"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="setRAM"
                    android:textOff="128mb"
                    android:textOn="128mb" />

                <ToggleButton
                    android:id="@+id/config_ram256"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="setRAM"
                    android:textOff="256mb"
                    android:textOn="256mb" />

                <ToggleButton
                    android:id="@+id/config_ramCustom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="setRAM"
                    android:textOff="Custom"
                    android:textOn="Custom" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/config_distance" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <SeekBar
                    android:id="@+id/config_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/config_distance_value"
                    android:max="13"
                    android:progress="10" />

                <TextView
                    android:id="@+id/config_distance_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="10" />
            </RelativeLayout>

            <TextView
                android:id="@+id/config_distance_warning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_distance_warning"
                android:textColor="#ff00" />

            <CheckBox
                android:id="@+id/config_rcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/config_rcon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/config_rcon_password" />

            <EditText
                android:id="@+id/config_rcon_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>